fixed edit dog modal z-index and new walk form

--- a/react-app/src/css-modules/DogCarousel.module.css
+++ b/react-app/src/css-modules/DogCarousel.module.css
@@ -6,4 +6,5 @@
     box-shadow: 0 0 15px #edf2f7;
     border-radius: 20px;
     border: 1px solid #edf2f7;
+    z-index: 0 !important;
 }
